--- a/index.html
+++ b/index.html
@@ -5,14 +5,20 @@
 <head>
 
   <!--This is my link to my css page-->
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
 
 </head>
+
+<body>
+
 
 <h1>Hello World</h1>
 <h2> Hi Mars</h2>
 <h3> Hi </h3>
 
 <h3>kjdsbsj</h3>
-
+  <script src="https://code.jquery.com/jquery.js"></script>
+  <script src="JS/bootstrap.min.js"> </script>
+</body>
 </html>
