--- a/index.html
+++ b/index.html
@@ -9,15 +9,57 @@
   <link rel="stylesheet" type="text/css" href="css/styles.css">
 
 </head>
-
 <body>
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+<div class="container">
+    <!-- Brand and toggle get grouped for better mobile display -->
+<div class="navbar-header">
+  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+    <span class="sr-only">Toggle navigation</span>
+    <span class="icon-bar"></span>
+    <span class="icon-bar"></span>
+    <span class="icon-bar"></span>
+  </button>
+  <a class="navbar-brand" href="#">Step into Christmas</a>
+</div>
+
+<div class="collapse navbar-collapse">
+<ul class="nav navbar-nav navbar-right">
+    <li><a href="#lights">Christmas Lights</a></li>
+    <li><a href="#todo">Activities</a></li>
+    <li><a href="#eat">Food</a></li>
+  </ul>
+  </div>
+</nav>
+</div>
 
 
-<h1>Hello World</h1>
-<h2> Hi Mars</h2>
-<h3> Hi </h3>
 
-<h3>kjdsbsj</h3>
+
+  <div class='jumbotron'>
+    <div class='container'>
+      <div class='row'>
+        <div class='col-sm-8'>
+
+          <h1>Step into Christmas</h1>
+          <h2>Explore London this Christmas</h2>
+
+        </div>
+        
+      </div>
+
+                <form role='form' class='form-inline'>
+            <div class="form-group">
+          <label for="email">Join our mailing list</label>
+          <input type="text" class='form-control' name="email" placeholder="Enter your email" >
+          <button type="submit" class='btn btn-success'>Send</button>
+          </div>
+          </form>
+    </div>
+  </div>
+
+
+
   <script src="https://code.jquery.com/jquery.js"></script>
   <script src="JS/bootstrap.min.js"> </script>
 </body>
