--- a/index.html
+++ b/index.html
@@ -162,9 +162,9 @@
 </form>
 
     <div id='social-buttons'>
-    <button class="btn btn-lg btn-twitter">Twitter</button>
-    <button class="btn btn-lg btn-facebook">Facebook</button>
-    <button class="btn btn-lg btn-pinterest">Pinterest</button>
+    <a href="https://twitter.com/"><button class="btn btn-lg btn-twitter" >Twitter</button></a>
+    <a href="https://facebook.com/"><button class="btn btn-lg btn-facebook">Facebook</button></a>
+    <a href="https://pinterest.com/"><button class="btn btn-lg btn-pinterest">Pinterest</button></a>
     </div>
   </div>
 
