--- a/index.html
+++ b/index.html
@@ -28,37 +28,13 @@
     <li><a href="#lights">Christmas Lights</a></li>
     <li><a href="#todo">Activities</a></li>
     <li><a href="#eat">Food</a></li>
+    <li><a href="#aboutus">About us</a></li>
   </ul>
   </div>
 </nav>
 </div>
 
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-  </ol>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img class="d-block w-100" src=".../800x400?auto=yes&bg=777&fg=555&te" alt="First slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src=".../800x400?auto=yes&bg=666&fg=444&text=Second slide" alt="Second slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src=".../800x400?auto=yes&bg=555&fg=333&text=Third slide" alt="Third slide">
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
+
 
 
   <div class='jumbotron'>
@@ -170,7 +146,7 @@
   </div>
   </div>
 
-  <div id="mission" class='text-center'>
+  <div id="aboutus" class='text-center'>
   <div class="container">
     <h2>About us<br /><small>Join us in our mission to spread Christmas cheer throughout London.</small> </h2>
 
