added images and centre
added carousel and images

--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
 
     <div class="row">
       <div class='col-sm-4 '>
-      <img src='images/person.jpg' class="img-circle  center-block">
+      <img src='images/RegentStreetLights.jpg' height="200" width="200" class="img-circle  center-block">
       <blockquote>
   <p><strong>Regent Street</strong> lights are always spectacular and it's home to Hamleys the world's oldest toy store where Santa has been in residence this year since late September. Let the angels guide you through a tradition dating back to 1954.</p>
   <small>Switched on 15th November until the 7th January. Nearest tubes Oxford Circus and Picadilly Circus </small>
 </blockquote>
       </div>
       <div class='col-sm-4'>
-      <img src='images/person.jpg' class="img-circle  center-block">
+      <img src='images/kewgardens.jpg' height="200" width="200" class="img-circle  center-block">
       <blockquote>
   <p><strong>Kew Gardens </strong> represents quantity and quality this Christmas with over one million lights spread over a two kilometer trail. Visiting Kew Gardens is sure to impress even the most miserable Scrooge!</p>
   <small>Switched on from 22nd November to 5th January. Last few tickets remaining- click for tickets</small>
@@ -72,7 +72,7 @@
 </blockquote>
       </div>
       <div class='col-sm-4'>
-      <img src='images/person.jpg' class="img-circle  center-block">
+      <img src='images/CoventGarden.jpg' height="200" width="200" class="img-circle  center-block">
       <blockquote>
   <p><strong>Covent Garden</strong> is home to London's biggest hand-picked Christmas tree weighing a whopping 1.5 tonnes and glittering with 30,000 lights. If you're looking for a pre-theatre wonder, look no further- Covent Garden is the place to be.</p>
   <small>Switched on 13th November until early January. Make sure to look out for the sparkling silver reindeer- it's hard to miss!</small>
@@ -89,21 +89,21 @@
 
     <div class="row">
       <div class='col-sm-4 '>
-      <img src='images/winterwonderland.png' class="img-circle  center-block">
+      <img src='images/winterwonderland.png' height="200" width="200" class="img-circle  center-block">
       <blockquote>
   <p><strong>Winter Wonderland</strong>, the holy grail of Christmas in London. From thrilling fairground rides and ice skating to charming Christmas markets and family shows. Winter Wonderland has something for the whole family this festive season!</p>
   <small>Opens 23 November until the 6th January. Open everyday 10am-10pm. Nearest tubes: Marble Arch and Hyde Park Corner </small>
 </blockquote>
       </div>
       <div class='col-sm-4'>
-      <img src='images/person.jpg' class="img-circle  center-block">
+      <img src='images/NaturalHistoryMuseumIceSkating.jpg' height="200" width="200" class="img-circle  center-block">
       <blockquote>
   <p><strong>Ice skating </strong> Whether you're a bambi or a princess on ice, nothing says Christmas in the capital like skating at the Natural History Museum or Somerset House. Let these iconic backgrounds provide the ideal location for your festive instagram feed.</p>
   <small>Nearest tubes: Somerset House- Temple. Natural History Museum- South Kensington</small>
 </blockquote>
       </div>
       <div class='col-sm-4'>
-      <img src='images/person.jpg' class="img-circle  center-block">
+      <img src='images/igloos.png' height="200" width="200" class="img-circle  center-block">
       <blockquote>
   <p><strong>Igloos </strong> are perhaps the most romantic place for you and your loved ones this Christmas. Providing a cosy covered spot, the igloos nestled on the Southbank offer unrivalled views of London from your very own festive pod.</p>
   <small>Nearest tube: London Bridge</small>
@@ -120,21 +120,21 @@
 
     <div class="row">
       <div class='col-sm-4 '>
-      <img src='images/person.jpg' class="img-circle  center-block">
+      <img src='images/DallowayTerrace.png' height="200" width="200" class="img-circle  center-block">
       <blockquote>
   <p><strong>Dalloway Terrace</strong>, is London's most seasonal restaurant with changing surroundings throughout the year. Christmas is no exception with enchanting decorations and delectable food to match. For all the instagrammers out there, this is a compulsory addition to your feed.</p>
   <small>Nearest tube: Tottenham Court Road</small>
 </blockquote>
       </div>
       <div class='col-sm-4'>
-      <img src='images/person.jpg' class="img-circle  center-block">
+      <img src='images/miracleathenrietta.jpg' height="200" width="200" class="img-circle  center-block">
       <blockquote>
-  <p><strong>Miracle at Henrietta Hotel </strong>New York’s famous ‘Miracle on 9th Street’ is crossing the pond for the first time ever. There will be a renowned roster of Christmas concoctions, designed by original Experimental Cocktail Club alumni Nico de Soto, who returns to the Experimental family with favourites such as the Snowball Old Fashioned and Christmapolitan all served in famously fun and festive glassware. </p>
+  <p><strong>Miracle at Henrietta Hotel </strong>New York’s famous ‘Miracle on 9th Street’ is crossing the pond for the first time ever. There will be a renowned roster of Christmas concoctions, designed by original Experimental Cocktail Club alumni Nico de Soto, who returns to the Experimental family with favourites such as the Snowball Old Fashioned and Christmapolitan all served in famously fun and festive glassware. </p>
   <small>Nearest tubes: Covent Garden</small>
 </blockquote>
       </div>
       <div class='col-sm-4'>
-      <img src='images/person.jpg' class="img-circle  center-block">
+      <img src='images/christmasbyriver.png' height="200" width="200" class="img-circle  center-block">
       <blockquote>
   <p><strong>Christmas by the River </strong> The banks of the River Thames are home to the annual Christmas by the River market once again in 2018. With views of Tower of London and Tower Bridge, plus an ace combination of homemade gifts and delicious food sold from German-style chalets, it's a festive winner.</p>
   <small>Nearest tube: London Bridge</small>
