--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 
 <head>
 
+<title>Step Into Christmas</title>
+
   <!--This is my link to my css page-->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
