--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 </div>
   <div id="lights" class="text-center">
   <div class="container">
-  <h2><small>Christmas lights</small><br />Where to get lit in London</h2>
+  <h2>Christmas lights<br /><small>Where to get lit in London</small></h2>
 
     <div class="row">
       <div class='col-sm-4 '>
@@ -87,7 +87,7 @@
 
   <div id="todo" class="text-center">
   <div class="container">
-  <h2><small>Activities</small><br />Where to keep occupied and stay off the naughty list</h2>
+  <h2>Activities<br /><small>Where to keep occupied and stay off the naughty list</small></h2>
 
     <div class="row">
       <div class='col-sm-4 '>
@@ -118,7 +118,7 @@
 
   <div id="eat" class="text-center">
   <div class="container">
-  <h2><small>Festive Food</small><br />Where to eat, drink and be merry</h2>
+  <h2>Festive Food<br /><small>Where to eat, drink and be merry</small></h2>
 
     <div class="row">
       <div class='col-sm-4 '>
