--- a/index.html
+++ b/index.html
@@ -151,9 +151,9 @@
   <div class="container">
     <h2>About us<br /><small>Join us in our mission to spread Christmas cheer throughout London.</small> </h2>
 
-    <p class="lead">Step into Christmas this Winter by visiting one of our top picks of activities, christmas lights and festive food</p>
-    <p class="lead">Currently seeking new team members who have expertise in CSS and Javascript</p>
-    <p class="lead">Don't miss out! Join our mailing list today</p>
+    <p class="lead"><small>Step into Christmas this Winter by visiting one of our top picks of activities, christmas lights and festive food</small></p>
+    <p class="lead"><small>Currently seeking new team members who have expertise in CSS and Javascript</small></p>
+    <p class="lead"><small>Don't miss out! Join our mailing list today</small></p>
 
     <form role='form' class='form-inline'>
 <div class="form-group">
