--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
       <img src='images/miracleathenrietta.jpg' height="200" width="200" class="img-circle  center-block">
       <blockquote>
   <p><strong>Miracle at Henrietta Hotel </strong>New York’s famous ‘Miracle on 9th Street’ is crossing the pond for the first time ever. There will be a renowned roster of Christmas concoctions, designed by original Experimental Cocktail Club alumni Nico de Soto, who returns to the Experimental family with favourites such as the Snowball Old Fashioned and Christmapolitan all served in famously fun and festive glassware. </p>
-  <small>Nearest tubes: Covent Garden</small>
+  <small>Nearest tube: Covent Garden</small>
 </blockquote>
       </div>
       <div class='col-sm-4'>
@@ -150,11 +150,11 @@
   <div id="aboutus" class='text-center'>
   <div class="container">
     <h2>About us<br /><small>Join us in our mission to spread Christmas cheer throughout London.</small> </h2>
-
-    <p class="lead">Step into Christmas this Winter by visiting one of our top picks of activities, christmas lights and festive food</p>
-    <p class="lead">Currently seeking new team members who have expertise in CSS and Javascript</p>
-    <p class="lead">Don't miss out! Join our mailing list today</p>
-
+<div>
+    <p class="lead"><small>Step into Christmas this Winter by visiting one of our top picks of activities, christmas lights and festive food</small></p>
+    <p class="lead"><small>Currently seeking new team members who have expertise in CSS and Javascript</small></p>
+    <p class="lead"><small>Don't miss out! Join our mailing list today</small></p>
+</div>
     <form role='form' class='form-inline'>
 <div class="form-group">
 <label for="email">Join our mailing list</label>
